<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="5sp"
    android:paddingBottom="5sp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorOnPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/Font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="30sp"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:text="@string/welcome_message1"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                style="@style/FontThinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:gravity="center"
                android:text="@string/welcome_message2"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="12.5sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginBottom="30sp"
                android:orientation="horizontal">

                <TextView
                    style="@style/FontThinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:gravity="center"
                    android:text="@string/already_have_account"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="12.5sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/have_account"
                    style="@style/Font"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Перейти"
                    android:textColor="@color/black"
                    android:textSize="12.5sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:gravity="left"
                android:text="@string/above_email_address"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="17.5sp" />

            <EditText
                android:id="@+id/set_email"
                style="@style/FontThinner"
                android:layout_width="275sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="17.5sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:gravity="left"
                android:text="@string/above_name_surname"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="17.5sp" />

            <!--<TextView
                android:id="@+id/red1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:gravity="left"
                android:text="@string/alarm_data"
                android:textColor="#F44336"
                android:textSize="15sp"
                android:textStyle="bold" />-->

            <EditText
                android:id="@+id/set_name"
                style="@style/FontThinner"
                android:layout_width="275sp"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz_ABCDEFGHIJKLMNOPQRSTUVWXYZ абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ"
                android:gravity="center"
                android:hint="@string/name_surname"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="17.5sp" />

            <EditText
                android:id="@+id/set_nick"
                style="@style/FontThinner"
                android:layout_width="275sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:digits="0123456789.abcdefghijklmnopqrstuvwxyz_ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:gravity="center"
                android:hint="@string/nickname"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="17.5sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:gravity="left"
                android:text="@string/above_password"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="17.5sp" />

            <!--<TextView
                android:id="@+id/red2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:gravity="left"
                android:text="@string/alarm_password"
                android:textColor="#F44336"
                android:textSize="15sp"
                android:textStyle="bold" />-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/set_password"
                    style="@style/FontThinner"
                    android:layout_width="235sp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789.abcdefghijklmnopqrstuvwxyz_ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:gravity="center"
                    android:hint="@string/strong_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textSize="17.5sp" />

                <Button
                    android:id="@+id/btn_view_password"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="7.5sp"
                    android:background="@android:drawable/ic_menu_view" />

            </LinearLayout>

            <TextView
                android:id="@+id/alaalarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:layout_marginBottom="15sp"
                android:gravity="left"
                android:text="@string/alarm_reg"
                android:textColor="#F44336"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    style="@style/ButtonStyle"
                    android:layout_width="125sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:layout_marginBottom="15sp"
                    android:text="@string/get_link"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/replacement_register"
                    android:layout_width="125sp"
                    android:layout_height="match_parent"
                    android:text="@string/after_gone_btn"
                    android:textColor="@color/black"
                    android:textSize="12.5sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10sp"
                    android:layout_marginBottom="15sp"
                    android:background="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_sign_in"
                    style="@style/ButtonStyle"
                    android:layout_width="125sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15sp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>